plugins {
    id 'java'
    id 'eclipse'
    id 'io.spring.dependency-management' version '1.1.7'
    // 컴파일시 규칙 위반을 잡기 위한 도구
    id 'checkstyle'
}

group = 'com.rihee.alerting'
version = '0.0.1-SNAPSHOT'
description = '''\
A centralized Spring Boot multi-module project designed to simulate log collection, event filtering, and asynchronous notifications through Kafka topics.
(MSA 기반 분산 로그 수집 및 경고 알림 시스템)
'''

repositories {
    mavenCentral()
}

tasks.named('check').configure {
    dependsOn 'checkstyleMain'
    dependsOn 'checkstyleTest'
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'eclipse'
    apply plugin: 'checkstyle'
    apply plugin: 'io.spring.dependency-management'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
    }

    repositories {
        mavenCentral()
    }

    dependencies {
        if (project.name != "log-stream-common" && project.name != "log-stream-logging-service") {
            implementation 'org.springframework.boot:spring-boot-starter'
            testImplementation 'org.springframework.boot:spring-boot-starter-test'
            testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
        }
    }

    checkstyle {
        toolVersion = "${checkStyleVersion}"
        configFile = file("${rootDir}/config/checkstyle/checkstyle.xml")
        configProperties = [
                "suppressionsFile": file("${rootDir}/config/checkstyle/suppressions.xml").absolutePath
        ]
        ignoreFailures = false   // 위반 시 빌드 실패
        showViolations = true    // 콘솔에 위반 사항 출력
    }

    afterEvaluate {
        checkstyle.sourceSets = [sourceSets.main, sourceSets.test]
    }

    tasks.named('test', Test).configure {
        test.useJUnitPlatform()
        jvmArgs += "-XX:+EnableDynamicAgentLoading"
    }

    tasks.named('check').configure {
        dependsOn 'checkstyleMain', 'checkstyleTest'
    }
}